fix some dark mode styles

--- a/src/client/stylesheets/antd-dark.less
+++ b/src/client/stylesheets/antd-dark.less
@@ -14,4 +14,12 @@ html[data-theme="dark"]:not(h1 h2 h3 h4 h5 p) {
   .ant-input:focus {
     box-shadow: 0 0 0 0;
   }
+
+  .ant-table-tbody > tr.ant-table-placeholder:hover > td {
+    background: var(--black20);
+  }
+
+  .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+    background: none;
+  }
 }
